idf_component_register(SRCS 
                    "pb_common.c"
                    "pb_encode.c"
                    "pb_decode.c"
                    "google/protobuf/empty.pb.c"
                    "google/protobuf/timestamp.pb.c"
                    "google/protobuf/wrappers.pb.c"
                    INCLUDE_DIRS .
                    )
